# Androbot

./: .gitignore  CMakeLists.txt  Clock.cpp  Clock.hpp  Graphics.cpp  Graphics.hpp  RealSenseDepthRenderer.sln  RealSenseDepthRenderer.vcxproj  RenderState.hpp  color.hpp  main.cpp  pch.hpp  utils.cpp  utils.hpp
CMake/: AddCImg.cmake  AddGlew.cmake  AddLibRealSense.cmake  AddLibrealsense.cmake  ConfigWin32.cmake  ThirdPartyDefs.cmake
include/: Array.hpp  Clock.hpp  Coordinate2d.hpp  Matrix.hpp  Point.hpp  Range.hpp  Timer.hpp  utils.hpp
include/cross_platform/: pch.hpp
src/: CMakeLists.txt  Clock.cpp  MatrixTest.cpp  RenderState.cpp  SerialPort.cpp  main.cpp
src/cross_platform/: main_cross_platform.cpp
